<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_small"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Headline"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nobody" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/TextView"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

<!--        <com.google.android.material.chip.ChipGroup-->
<!--            android:id="@+id/chip_genres"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/spacing_small"-->
<!--            app:layout_constraintStart_toEndOf="@id/tv_genre"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_title"-->
<!--            tools:layout_editor_absoluteX="50dp">-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/SmallChip"-->
<!--                android:text="Science Fiction" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/SmallChip"-->
<!--                android:text="Action" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/SmallChip"-->
<!--                android:text="Drama" />-->

<!--        </com.google.android.material.chip.ChipGroup>-->


        <!--        <TextView-->
        <!--            android:id="@+id/tv_rating"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:text="@string/dummy_rating"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />-->

        <!--        <RatingBar-->
        <!--            android:id="@+id/rating_bar"-->
        <!--            style="@style/MyRatingBar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="4dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/tv_rating"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/tv_rating" />-->


        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            tools:text="In a time when monsters walk the Earth, humanity’s fight for its future sets Godzilla and Kong on a collision course that will see the two most powerful forces of nature on the planet collide in a spectacular battle for the ages." />

        <Button
            android:id="@+id/btn_favorite"
            style="@style/Button.Block"
            android:text="@string/add_to_my_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>