<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/nav_movie" />
    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/nav_tv_show" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/nav_favorite"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings"/>
</menu>